# fractol_v5

./: CMakeLists.txt  Makefile  fractol_v5
includes/: fractol.h
libft/: .Makefile.swp  Makefile  author
libft/includes/: libft.h
src/: main.c
